# remoteobjects-py

./: requirements.txt  setup.cfg  setup.py
docs/notebooks/: origin_story.ipynb  origin_story.slides.html
src/client/: __init__.py  define_remote_class.py  define_remote_object_loc.py  remote_attribute.py  remote_instance.py  remote_object.py  rest_client.py
src/remoteobjects/client/: __init__.py  define_remote_class.py  define_remote_object_loc.py  remote_attribute.py  remote_instance.py  remote_object.py  rest_client.py
src/remoteobjects/server/: __init__.py  endpoints.py  object_registry.py  server_version.py
src/server/: __init__.py  endpoints.py  object_registry.py  server_version.py
tests/: test_remoteobjects.py  test_rest_server.py
