[metadata]
name = remoteobjects
version = 1.9.9
description = Remote object access under a client-server model.
long_description = file: README.md, COPYING
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Framework :: Flask

[options]
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
    requests
    flask
    flask_restful

[options.packages.find]
where = 
    src
exclude =
    docs*
    tests*